--- a/map.jinja
+++ b/map.jinja
@@ -1,10 +1,12 @@
 {% set mysql = salt['grains.filter_by']({
    
   'Debian': {
-    'server': 'mysql-server'
+    'server': 'mysql-server',
+    'client': 'mysql-client',
   },
 
   'RedHat': {
     'server': 'mariabd-server',
+    'client': 'mariadb',
   },
 })%}
