--- a/map.jinja
+++ b/map.jinja
@@ -3,10 +3,18 @@
   'Debian': {
     'server': 'mysql-server',
     'client': 'mysql-client',
+    'server_conf': '/etc/mysql/mysql.conf.d/mysqld.cnf',
+    'server_conf_source': 'salt://mysql/files/deb_mysql.cnf',
+    'service' : 'mysql',
+    'python': 'python-mysqld',
   },
 
   'RedHat': {
     'server': 'mariabd-server',
     'client': 'mariadb',
+    'server_conf': '/etc/my.cnf.d/server.cnf',
+    'server_conf_source': 'salt://mysql/files/rh_server.cnf',
+    'service' : 'mariabd',
+    'python': 'MYSQL-python',
   },
 })%}
